# Backend-API

./: db.sqlite3  manage.py  pyproject.toml
LittleLemon/: admin.py  models.py  serializers.py  urls.py  views.py
LittleLemon/migrations/: 0001_initial.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_menuitem.py  0003_cart.py  0004_alter_cart_unique_together.py  0005_order.py  0006_orderitem.py
chefsTable/: settings.py  urls.py
drfapp/: urls.py  views.py
myapp/: admin.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_book.py
templates/: form.html
